[metadata]
name = epicsdbbuilder
description = EPICS Database Builder
url = https://github.com/dls-controls/epicsdbbuilder
author = Michael Abbott
author_email = Michael.Abbott@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:

# If you want to include data files in packages,
# either define [options.package_data] or
# set this to True and include a MANIFEST.in file.
include_package_data = False

[options.packages.find]
# Don't include our test directory in the distribution
exclude = test

[flake8]
max-line-length = 80
extend-ignore =
    F401 F403 F405  # Allow from module import *
    E251  # Allow call(param = value)
    E301 E302 E303 E305 # Allow any number of blank lines

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --flake8 --doctest-modules --doctest-glob="*.rst"
     --cov=epicsdbbuilder --cov-report term --cov-report xml:cov.xml

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py
